# ax-mcp-monitor

./: .gitignore  AGENTS.md  CLAUDE.md  DEMO.txt  DEMO_CLIENT.md  DEMO_ROUND_ROBIN.md  DEMO_RUNBOOK.md  DEMO_STEPS.md  GEMINI-QUICKSTART.md  README.md  RUNBOOK.md  demo_templates.sh  mcp_tool_manager.py  monitor_revert.patch  pyproject.toml  reliable_monitor.py  simple_working_monitor.py  test_conversation_initiator.sh  test_gemini.py  test_vertex_ai.py  test_vertex_direct.py
configs/: README.md  conversation_templates.json  evaluation_presets.json  mcp_config.example.json
plugins/: __init__.py  base_plugin.py  echo_plugin.py  gemini_plugin.py  langgraph_plugin.py  ollama_plugin.py  openrouter_plugin.py
prompts/: ax_researcher_system_prompt.txt  debate_absurd_system_prompt.txt  future_of_work_system_prompt.txt  ollama_monitor_system_prompt.txt  quantum_chat_system_prompt.txt  roast_battle_system_prompt.txt  tic_tac_toe_system_prompt.txt
scripts/: add_battle_template.sh  chained_prediction_market.py  client_demo.py  client_demo_monitor.py  demo_alert_single.sh  demo_canned_message.py  demo_controller.py  demo_fast.sh  demo_ping_pong.py  director_demo.py  director_orchestrated.py  director_round_robin.py  director_simple.py  live_prediction_monitor.py  mcp_use_dual_convo.py  mcp_use_heartbeat_monitor.py  mcp_use_long_poll_probe.py  mcp_use_monitor.py  mcp_use_tester.py  moderator_prompt_example.py  multi_agent_game.py  orchestrated_demo.py  orchestrated_prediction_market.py  prediction_market.py  run_grok_monitor.sh  run_langgraph_monitor.sh  send_demo_fraud_alert.py  (+13 more)
(+32 files in other folders)
